<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.auiucloud</groupId>
        <artifactId>auiu-meta-admin</artifactId>
        <version>1.0.1</version>
    </parent>

    <artifactId>meta-admin</artifactId>

    <properties>
        <java.version>11</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>meta-admin-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-cloud</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-web</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-log</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auiucloud</groupId>
            <artifactId>auiu-meta-rule</artifactId>
        </dependency>
        <dependency>
            <groupId>de.codecentric</groupId>
            <artifactId>spring-boot-admin-starter-server</artifactId>
        </dependency>
        <dependency>
            <groupId>de.codecentric</groupId>
            <artifactId>spring-boot-admin-server-ui</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
            </plugin>
        </plugins>
        <finalName>${project.artifactId}</finalName>
    </build>

</project>
